manifests/opa/constraints/constraint-require-registry-annotation.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: ns-must-have-registry
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    annotations:
      - key: "registry"
